# wastlernet

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  main.cpp  wastlernet.service  wastlernet.textpb
base/: http_connection.cpp  http_connection.h  http_connection_test.cpp  metrics.cpp  metrics.h  modbus_connection.cpp  modbus_connection.h  modbus_connection_test.cpp  module.h  updater.h  utility.cpp  utility.h
cmake/: BuildGTest.cmake  BuildGlog.cmake  BuildGumboQuery.cmake  BuildHueplusplus.cmake
config/: CMakeLists.txt  config.proto
devices/: CMakeLists.txt  devices.proto
docker/: entrypoint.sh
fritzbox/: wastlernet.py
fronius/: CMakeLists.txt  fronius.proto  fronius_client.cpp  fronius_client.h  fronius_client_debug.cpp  fronius_modbus.h  fronius_modbus_debug.cpp  fronius_module.cpp  fronius_module.h  fronius_timescaledb.cpp  fronius_timescaledb.h
grafana/: heating.json  pv.json
hafnertec/: CMakeLists.txt  README.md  hafnertec.proto  hafnertec.sql  hafnertec_client.cpp  hafnertec_client.h  hafnertec_client_test.cpp  hafnertec_modbus_debug.cpp  hafnertec_module.cpp  hafnertec_module.h  hafnertec_timescaledb.cpp  hafnertec_timescaledb.h
hue/: CMakeLists.txt  hue.proto  hue.sql  hue_client.cpp  hue_client.h  hue_debug.cpp
include/: http_connection.cpp  http_connection.h  http_connection_test.cpp  modbus_connection.cpp  modbus_connection.h  modbus_connection_test.cpp  module.h  updater.h
senec/: CMakeLists.txt  README.md  senec.proto  senec.sql  senec_client.cpp  senec_client.h  senec_client_test.cpp  senec_module.cpp  senec_module.h  senec_timescaledb.cpp  senec_timescaledb.h  test_request.json
shelly/: CMakeLists.txt  blu-to-mqtt.js  shelly.proto  shelly.sql  shelly_debug.cpp  shelly_module.cpp  shelly_module.h  shelly_timescaledb.cpp  shelly_timescaledb.h
solvis/: CMakeLists.txt  solvis.proto  solvis.sql  solvis_client.cpp  solvis_client.h  solvis_debug.cpp  solvis_modbus.cpp  solvis_modbus.h  solvis_module.cpp  solvis_module.h  solvis_timescaledb.cpp  solvis_timescaledb.h  solvis_updater.cpp  solvis_updater.h
timescaledb/: timescaledb-client.h
weather/: CMakeLists.txt  weather.proto  weather.sql  weather_listener.cpp  weather_listener.h  weather_module.cpp  weather_module.h  weather_timescaledb.cpp  weather_timescaledb.h
